--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-asgiref==3.5.2
-certifi==2021.10.8
-charset-normalizer==2.0.10
-Django==4.1.2
-django-filter==22.1
-django-tables2==2.4.1
-humanize==4.4.0
-idna==3.3
-marshmallow==3.18.0
+asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
+Django==4.2.16
+django-filter==24.3
+django-tables2==2.7.0
+humanize==4.11.0
+idna==3.10
+marshmallow==3.22.0
 oauthlib==3.2.2
-packaging==21.3
-pyparsing==3.0.9
-python-dotenv==0.21.0
-PyYAML==6.0
-requests==2.28.1
-requests-oauthlib==1.3.1
-sqlparse==0.4.2
-urllib3==1.26.8
+packaging==24.1
+python-dotenv==1.0.1
+PyYAML==6.0.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+sqlparse==0.5.1
+typing_extensions==4.12.2
+urllib3==2.2.3
